--- a/Portfolio.css
+++ b/Portfolio.css
@@ -513,8 +513,11 @@
   .portfolio1 {
     position: relative;
     max-width: 100%;
+
   }
   .portfolio1 {
+    margin-top: 25px;
+    margin-left: -100px;
     width: 475px;
     display: inline-block;
     flex-shrink: 0;
@@ -635,15 +638,20 @@
     align-items: flex-start;
     max-width: 100%;
   }
+  
   .contact-info {
-    background-color: var(--color-black);
-    justify-content: center;
-    padding: 34px 47px var(--padding-4xl) 243px;
+  
+    justify-content: flex-start;
+    padding: 34px 47px var(--padding-4xl) 0px;
+    margin-left: -400px; /* Adjust this value as needed */
+ 
     box-sizing: border-box;
     gap: 47px;
     flex-shrink: 0;
     font-size: var(--font-size-mini);
   }
+  
+  
   .footer-content {
     justify-content: flex-start;
     row-gap: 20px;
